@@ -10,4 +10,5 @@ Graphics:
 Translations:
 * Jussi Lind (fi)
 * olielvewen <olivier@openshot.org> (fr)
+* Albano Battistella (it)
 
