@@ -1,0 +1,455 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.1" language="it_IT">
+<context>
+    <name>AboutDlg</name>
+    <message>
+        <location filename="../about_dlg.cpp" line="28"/>
+        <source>About </source>
+        <translation>informazioni su</translation>
+    </message>
+    <message>
+        <location filename="../about_dlg.cpp" line="43"/>
+        <source> is licenced under </source>
+        <translation> è concesso in licenza sotto </translation>
+    </message>
+    <message>
+        <location filename="../about_dlg.cpp" line="45"/>
+        <source>Project website: </source>
+        <translation>Sito web del progetto: </translation>
+    </message>
+    <message>
+        <location filename="../about_dlg.cpp" line="47"/>
+        <source>Support </source>
+        <translation>Supporto</translation>
+    </message>
+    <message>
+        <location filename="../about_dlg.cpp" line="47"/>
+        <source> on Patreon: </source>
+        <translation>su Patreon: </translation>
+    </message>
+</context>
+<context>
+    <name>Application</name>
+    <message>
+        <location filename="../application.cpp" line="151"/>
+        <source>Heimer Files</source>
+        <translation>Heimer Files</translation>
+    </message>
+    <message>
+        <location filename="../application.cpp" line="232"/>
+        <source>Open File</source>
+        <translation>Apri file</translation>
+    </message>
+    <message>
+        <location filename="../application.cpp" line="265"/>
+        <source>Failed to save file.</source>
+        <translation>Impossibile salvare il file.</translation>
+    </message>
+    <message>
+        <location filename="../application.cpp" line="283"/>
+        <source>Save File As</source>
+        <translation>Salva file come</translation>
+    </message>
+    <message>
+        <location filename="../application.cpp" line="299"/>
+        <source>File &apos;</source>
+        <translation>File &apos;</translation>
+    </message>
+    <message>
+        <location filename="../application.cpp" line="299"/>
+        <source>&apos; saved.</source>
+        <translation>&apos; salvato</translation>
+    </message>
+    <message>
+        <location filename="../application.cpp" line="305"/>
+        <source>Failed to save file as &apos;</source>
+        <translation>Impossibile salvare il file come &apos;</translation>
+    </message>
+    <message>
+        <location filename="../application.cpp" line="357"/>
+        <source>The mind map has been modified.</source>
+        <translation>La mappa mentale è stata modificata.</translation>
+    </message>
+    <message>
+        <location filename="../application.cpp" line="358"/>
+        <source>Do you want to save your changes?</source>
+        <translation>Vuoi salvare le tue modifiche?</translation>
+    </message>
+</context>
+<context>
+    <name>EditorView</name>
+    <message>
+        <source>Choose File-&gt;New or File-&gt;Open to begin</source>
+        <translation type="vanished">Scegli File-&gt;Nuovo o File-&gt;Apri per iniziare</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="65"/>
+        <source>Set background color</source>
+        <translation>Imposta il colore di sfondo</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="73"/>
+        <source>Set edge color</source>
+        <translation>Imposta il colore del bordo</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="81"/>
+        <source>Create floating node</source>
+        <translation>Crea un nodo mobile</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="91"/>
+        <source>Change direction</source>
+        <translation>Cambia direzione</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="98"/>
+        <source>Hide arrow</source>
+        <translation>Nascondi la freccia</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="105"/>
+        <source>Single arrow</source>
+        <translation>Singola freccia</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="112"/>
+        <source>Double arrow</source>
+        <translation>Doppia freccia</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="119"/>
+        <source>Delete edge</source>
+        <translation>Elimina bordo</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="158"/>
+        <source>Set node color</source>
+        <translation>Imposta il colore del nodo</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="168"/>
+        <source>Set text color</source>
+        <translation>Imposta il colore del nodo</translation>
+    </message>
+    <message>
+        <location filename="../editor_view.cpp" line="178"/>
+        <source>Delete node</source>
+        <translation>Cancella nodo</translation>
+    </message>
+</context>
+<context>
+    <name>ExportToPNGDialog</name>
+    <message>
+        <source>Export to PNG Image</source>
+        <translation type="vanished">Esporta in immagine PNG</translation>
+    </message>
+    <message>
+        <source>Export As</source>
+        <translation type="vanished">Esporta come</translation>
+    </message>
+    <message>
+        <source>PNG Files</source>
+        <translation type="vanished">PNG-files</translation>
+    </message>
+    <message>
+        <source>Couldn&apos;t write to</source>
+        <translation type="vanished">Non puoi scrivere a</translation>
+    </message>
+    <message>
+        <source>Filename</source>
+        <translation type="vanished">Nome file</translation>
+    </message>
+    <message>
+        <source>Export as..</source>
+        <translation type="vanished">Esporta come..</translation>
+    </message>
+    <message>
+        <source>Image Size</source>
+        <translation type="vanished">Dimensione dell&apos;immagine</translation>
+    </message>
+    <message>
+        <source>Width (px):</source>
+        <translation type="vanished">Larghezza (px):</translation>
+    </message>
+    <message>
+        <source>Height (px):</source>
+        <translation type="vanished">Altezza (px):</translation>
+    </message>
+    <message>
+        <source>Background</source>
+        <translation type="vanished">Sfondo</translation>
+    </message>
+    <message>
+        <source>Transparent background</source>
+        <translation type="vanished">Sfondo trasparente</translation>
+    </message>
+    <message>
+        <source>Cancel</source>
+        <translation type="vanished">Cancella</translation>
+    </message>
+    <message>
+        <source>Export</source>
+        <translation type="vanished">Esporta</translation>
+    </message>
+</context>
+<context>
+    <name>MainWindow</name>
+    <message>
+        <source>Rifare</source>
+        <translation type="vanished">Indietro</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="61"/>
+        <source>Redo</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="76"/>
+        <source>Undo</source>
+        <translation>Ritorna</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="91"/>
+        <source>&amp;Edit</source>
+        <translation>&amp;Modifica</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="99"/>
+        <source>Set background color</source>
+        <translation>Imposta il colore di sfondo</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="110"/>
+        <source>Set edge color</source>
+        <translation>Imposta il colore del bordo</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="132"/>
+        <source>Corner radius:</source>
+        <translation>Raggio dell&apos;angolo:</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="158"/>
+        <source>Edge width:</source>
+        <translation>Larghezza del bordo:</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="183"/>
+        <source>Text size:</source>
+        <translation>Dimensione del testo:</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="208"/>
+        <source>Grid size:</source>
+        <translation>Dimensione della griglia:</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="225"/>
+        <source>&amp;File</source>
+        <translation>&amp;File</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="228"/>
+        <source>&amp;New</source>
+        <translation>&amp;Nuovo</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="236"/>
+        <source>&amp;Open</source>
+        <translation>&amp;Apri</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="246"/>
+        <source>&amp;Save</source>
+        <translation>&amp;Salva</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="255"/>
+        <source>&amp;Save as</source>
+        <translation>&amp;Salva come</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="266"/>
+        <source>&amp;Export to PNG image</source>
+        <translation>&amp;Esporta in immagine PNG</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="276"/>
+        <source>&amp;Quit</source>
+        <translation>&amp;Abbandona</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="290"/>
+        <source>&amp;Help</source>
+        <translation>&amp;Aiuto</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="293"/>
+        <source>&amp;About</source>
+        <translation>&amp;A proposito di</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="298"/>
+        <source>About &amp;Qt</source>
+        <translation>Informazioni su &amp;Qt</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="318"/>
+        <source>&amp;View</source>
+        <translation>&amp;Vista</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="321"/>
+        <source>Zoom In</source>
+        <translation>Ingrandire</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="327"/>
+        <source>Zoom Out</source>
+        <translation>Zoom indietro</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="335"/>
+        <source>&amp;Zoom To Fit</source>
+        <translation>&amp;Zoom ottimizzato</translation>
+    </message>
+    <message>
+        <source>Heimer Files</source>
+        <translation type="vanished">Heimer Files</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="377"/>
+        <source>New File</source>
+        <translation>Nuovo file</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="380"/>
+        <source>Not Saved</source>
+        <translation>Non salvato</translation>
+    </message>
+    <message>
+        <source>The mind map has been modified.</source>
+        <translation type="vanished">La mappa mentale è stata modificata.</translation>
+    </message>
+    <message>
+        <source>Do you want to save your changes?</source>
+        <translation type="vanished">Vuoi salvare le tue modifiche?</translation>
+    </message>
+    <message>
+        <source>New file</source>
+        <translation type="vanished">Nuovo file</translation>
+    </message>
+    <message>
+        <source>Open File</source>
+        <translation type="vanished">Apri File</translation>
+    </message>
+    <message>
+        <location filename="../main_window.cpp" line="466"/>
+        <source>About Qt</source>
+        <translation>Informazioni su QT</translation>
+    </message>
+    <message>
+        <source>Failed to save file.</source>
+        <translation type="vanished">Impossibile salvare il file.</translation>
+    </message>
+    <message>
+        <source>Save File As</source>
+        <translation type="vanished">Salva file come</translation>
+    </message>
+    <message>
+        <source>File &apos;</source>
+        <translation type="vanished">File &apos;</translation>
+    </message>
+    <message>
+        <source>&apos; saved.</source>
+        <translation type="vanished">&apos;salvato.</translation>
+    </message>
+    <message>
+        <source>Failed to save file as &apos;</source>
+        <translation type="vanished">Impossibile salvare il file come &apos;</translation>
+    </message>
+</context>
+<context>
+    <name>PngExportDialog</name>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="35"/>
+        <source>Export to PNG Image</source>
+        <translation>Esporta in immagine PNG</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="41"/>
+        <source>Export As</source>
+        <translation>Esporta come</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="43"/>
+        <source>PNG Files</source>
+        <translation>PNG-Files</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="115"/>
+        <source>Couldn&apos;t write to</source>
+        <translation>Non puoi scrivere a</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="147"/>
+        <source>Filename</source>
+        <translation>Nome file</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="153"/>
+        <source>Export as..</source>
+        <translation>Esporta come..</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="157"/>
+        <source>Image Size</source>
+        <translation>Dimensione immagine</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="159"/>
+        <source>Width (px):</source>
+        <translation>Larghezza (px):</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="165"/>
+        <source>Height (px):</source>
+        <translation>Altezza (px):)</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="173"/>
+        <source>Background</source>
+        <translation>Sfondo</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="176"/>
+        <source>Transparent background</source>
+        <translation>Sfondo trasparente</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="190"/>
+        <source>Cancel</source>
+        <translation>Cancella</translation>
+    </message>
+    <message>
+        <location filename="../png_export_dialog.cpp" line="193"/>
+        <source>Export</source>
+        <translation>Esporta</translation>
+    </message>
+</context>
+<context>
+    <name>QObject</name>
+    <message>
+        <location filename="../reader.cpp" line="28"/>
+        <source>Cannot open file: &apos;</source>
+        <translation>Impossibile aprire il file: &apos;</translation>
+    </message>
+    <message>
+        <location filename="../reader.cpp" line="35"/>
+        <source>Corrupted file: &apos;</source>
+        <translation>File danneggiato: &apos;</translation>
+    </message>
+</context>
+</TS>
